# DreamCatalyst-PFC

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  reset_data.ps1  setup.sh  train.bat  train.sh
.ipynb_checkpoints/: README-checkpoint.md  requirements-checkpoint.txt  setup-checkpoint.sh  train-checkpoint.sh
dream_catalyst_ns/: __init__.py  dream_config.py  dream_pipeline.py
dream_catalyst_ns.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nerfstudio/: pyproject.toml
nerfstudio/3d_editing/dc_nerf/: dc_config.py
nerfstudio/3d_editing/dc_nerf/data/datamanagers/: dc_datamanager.py  dc_splat_datamanager.py
nerfstudio/3d_editing/dc_nerf/data/datamanagers/.ipynb_checkpoints/: dc_splat_datamanager-checkpoint.py
nerfstudio/3d_editing/dc_nerf/pipelines/: dc_pipeline.py  refinement_pipeline.py
nerfstudio/dc/: dc.py  tasd_config.py
nerfstudio/dc/.ipynb_checkpoints/: tasd_config-checkpoint.py
nerfstudio/nerfstudio/cameras/: camera_paths.py
nerfstudio/nerfstudio/configs/: dataparser_configs.py  method_configs.py
nerfstudio/nerfstudio/engine/: trainer.py
nerfstudio/nerfstudio/model_components/: losses.py
nerfstudio/nerfstudio/plugins/: registry.py  types.py
nerfstudio/nerfstudio/scripts/: train.py
scripts/: check_blur.py  diagnose_env.py  edit.sh  evaluate.py  evaluate.sh  pick_gpu.py  process_data.sh  refine.sh  train.sh
scripts/.ipynb_checkpoints/: check_blur-checkpoint.py  pick_gpu-checkpoint.py  process_data-checkpoint.sh  setup-checkpoint.sh  train-checkpoint.sh
threestudio/.ipynb_checkpoints/: README-checkpoint.md
threestudio/threestudio/: __init__.py
threestudio/threestudio/models/guidance/: __init__.py  stable_diffusion_sdi_guidance.py
threestudio/threestudio/systems/: __init__.py  base.py
threestudio/threestudio/utils/: misc.py  saving.py
