[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dream_catalyst_ns"
version = "0.1.0"
description = "DreamCatalyst-style 3D scene editing via Nerfstudio (SDS + InstructPix2Pix)"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }

# NOTE: The following must be installed BEFORE this package (they require
# special index URLs or system-level setup that pip cannot resolve here):
#   - PyTorch 2.1.2+cu118   (see README.md §1)
#   - nerfstudio 1.1.5      (pip install nerfstudio)
#   - COLMAP 3.9.1           (system binary – see README.md §2b)
#   - FFmpeg                 (system binary – see README.md §2a)
#
# Only extra pip-installable dependencies are listed below.
dependencies = [
    "diffusers>=0.36.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
]

[tool.setuptools.packages.find]
include = ["dream_catalyst_ns*"]

# ── Register the custom method with Nerfstudio's CLI ──────────────────────────
[project.entry-points.'nerfstudio.method_configs']
dream-catalyst = "dream_catalyst_ns.dream_config:DreamCatalyst"
